--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h2>Chart.js</h2>
     <div><canvas id="chart_bar"></canvas></div>
     <div><canvas id="chart_line"></canvas></div>
+    <div><canvas id="chart_doughnut"></canvas></div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
