--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <div><canvas id="chart_bar"></canvas></div>
     <div><canvas id="chart_line"></canvas></div>
     <div><canvas id="chart_doughnut"></canvas></div>
+    <div><canvas id="chart_radar"></canvas></div>
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
