분산그래프 scatter

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <div><canvas id="chart_line"></canvas></div>
     <div><canvas id="chart_doughnut"></canvas></div>
     <div><canvas id="chart_radar"></canvas></div>
+    <div><canvas id="chart_scatter"></canvas></div>
+    
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
