--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <h2>Chart.js</h2>
     <div><canvas id="chart_bar"></canvas></div>
     <div><canvas id="chart_line"></canvas></div>
+    <div><canvas id="chart_pie"></canvas></div>
     <div><canvas id="chart_doughnut"></canvas></div>
     <div><canvas id="chart_radar"></canvas></div>
     <div><canvas id="chart_scatter"></canvas></div>
